<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@+id/bottom_navigation_all">

        <fragment
            android:id="@+id/bottom_navigation_all"
            android:name="com.msbshamim60.wallshare.bottom_nav_ui.all.AllFragment"
            android:label="@string/title_all"
            tools:layout="@layout/all_fragment" >
                <action
                    android:id="@+id/action_bottom_navigation_all_to_show_post_fragment"
                    app:destination="@id/show_post_fragment" />
                <action
                    android:id="@+id/action_bottom_navigation_all_self"
                    app:destination="@id/bottom_navigation_all" />
        </fragment>

        <fragment
            android:id="@+id/bottom_navigation_category"
            android:name="com.msbshamim60.wallshare.bottom_nav_ui.category.CategoryFragment"
            android:label="@string/title_category"
            tools:layout="@layout/category_fragment" >
                <action
                    android:id="@+id/action_bottom_navigation_category_to_category_of_fragment"
                    app:destination="@id/category_of_fragment" />
        </fragment>


        <fragment
            android:id="@+id/category_of_fragment"
            android:name="com.msbshamim60.wallshare.bottom_nav_ui.category.category.CategoryOFFragment"
            android:label="@string/title_category"
            tools:layout="@layout/category_o_f_fragment" >
                <action
                    android:id="@+id/action_category_of_fragment_to_show_post_fragment"
                    app:destination="@id/show_post_fragment" />
        </fragment>

        <fragment
            android:id="@+id/logged_in_Fragment"
            android:name="com.msbshamim60.wallshare.bottom_nav_ui.profile.logged_in.LoggedInFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/logged_in_fragment">
                <action
                    android:id="@+id/action_logged_in_Fragment_to_login_fragment"
                    app:destination="@id/login_fragment" />
                <action
                    android:id="@+id/action_logged_in_Fragment_to_register_fragment"
                    app:destination="@id/register_fragment" />
                <action
                    android:id="@+id/action_logged_in_Fragment_to_new_post_fragment"
                    app:destination="@id/new_post_fragment" />
                <action
                    android:id="@+id/action_logged_in_Fragment_to_show_post_fragment"
                    app:destination="@id/show_post_fragment" />
                <action
                    android:id="@+id/action_logged_in_Fragment_to_offline_fragment"
                    app:destination="@id/offline_fragment"
                    app:popUpToInclusive="true"/>
        </fragment>

        <fragment
            android:id="@+id/login_fragment"
            android:name="com.msbshamim60.wallshare.bottom_nav_ui.profile.login.LoginFragment"
            android:label="@string/string_login"
            tools:layout="@layout/login_fragment">
                <action
                    android:id="@+id/action_login_fragment_to_logged_in_Fragment"
                    app:destination="@id/logged_in_Fragment" />
                <action
                    android:id="@+id/action_login_fragment_to_register_fragment"
                    app:destination="@id/register_fragment" />
        </fragment>


        <fragment
            android:id="@+id/register_fragment"
            android:name="com.msbshamim60.wallshare.bottom_nav_ui.profile.register.RegisterFragment"
            android:label="@string/register"
            tools:layout="@layout/register_fragment">
                <action
                    android:id="@+id/action_register_fragment_to_logged_in_Fragment"
                    app:destination="@id/logged_in_Fragment"
                    app:popUpToInclusive="true"/>
        </fragment>

        <fragment
            android:id="@+id/new_post_fragment"
            android:name="com.msbshamim60.wallshare.bottom_nav_ui.profile.new_post.NewPostFragment"
            android:label="@string/new_post"
            tools:layout="@layout/new_post_fragment">

                <action
                    android:id="@+id/action_new_post_fragment_to_logged_in_Fragment"
                    app:destination="@id/logged_in_Fragment"
                    app:popUpToInclusive="true"/>
        </fragment>

        <fragment
            android:id="@+id/show_post_fragment"
            android:name="com.msbshamim60.wallshare.bottom_nav_ui.showImage.ShowImageFragment"
            android:label="@string/show_post"
            tools:layout="@layout/show_image_fragment">
                <action
                    android:id="@+id/action_show_post_fragment_to_show_user_fragment"
                    app:destination="@id/show_user_fragment" />
        </fragment>

        <fragment
            android:id="@+id/show_user_fragment"
            android:name="com.msbshamim60.wallshare.bottom_nav_ui.showUser.ShowUserFragment"
            android:label="@string/new_post"
            tools:layout="@layout/recycler_view_fragment">

                <action
                    android:id="@+id/action_show_user_fragment_to_show_post_fragment"
                    app:destination="@id/show_post_fragment" />
        </fragment>

        <fragment
            android:id="@+id/offline_fragment"
            android:name="com.msbshamim60.wallshare.bottom_nav_ui.offline.OfflineFragment"
            android:label="Offline"
            tools:layout="@layout/offline_fragment">
                <action
                    android:id="@+id/action_offline_fragment_to_offline_show_imgae_fragment"
                    app:destination="@id/offline_show_imgae_fragment" />
        </fragment>

        <fragment
            android:id="@+id/offline_show_imgae_fragment"
            android:name="com.msbshamim60.wallshare.bottom_nav_ui.showImage.OfflineShowImageFragment"
            android:label="Image"
            tools:layout="@layout/offline_show_image_fragment">
        </fragment>
</navigation>