<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bottom_nav_ui.profile.new_post.NewPostFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        android:padding="10dp"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/outlinedTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/new_post_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floating_button_upload"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:elevation="10dp"
        app:icon="@drawable/ic_baseline_backup_24"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/post_title"
        android:layout_marginBottom="10dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/post_title_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/location"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/post_button"
        app:layout_constraintEnd_toStartOf="@+id/spinner_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/post_location_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/post_button"
        style="@style/Button_Style_primary"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:drawableLeft="@drawable/ic_baseline_post_add_24"
        android:text="@string/post"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner_view"
        style="@style/spinner_Style_primary"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/post_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textInputLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>