<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".bottom_nav_ui.profile.logged_in.LoggedInFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profile_image_view"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
                    android:contentDescription="@string/profile_picture"
                    android:scaleType="centerCrop"
                    android:layout_margin="10dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">


                <TextView
                    android:id="@+id/user_name_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:maxLines="2"
                    android:scrollHorizontally="true"
                    android:textSize="25sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <Button
                        android:id="@+id/edit_button"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="15sp"
                        android:text="@string/edit"
                        android:textAllCaps="false"
                        android:textSize="12sp"
                        tools:ignore="TouchTargetSizeCheck" />

                    <Button
                        android:id="@+id/profile_logout_button"
                        style="@style/Button_Style_primary"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:drawableLeft="@drawable/ic_logout"
                        android:text="@string/string_logout"
                        android:textAllCaps="false"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_post_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:icon="@drawable/ic_baseline_add_24"
        app:iconSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/downloaded_image_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:icon="@drawable/ic_baseline_arrow_downward_24"
        app:iconSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/add_post_button"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView3">
        <include layout="@layout/recycler_view_fragment"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>